<resources>
    <string name="app_name">TheHabitController_Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="addHabitTitleHint">Add a Habit Title</string>
    <string name="addHabitReasonHint">Add a Reason</string>
    <string name="habitStartDateHint">Start Date</string>
    <string name="habitStartDateButton">Start Date</string>
    <string name="addHabitButtonName">Add</string>
    <string name="cancelAddHabitButtonName">Cancel</string>
    <string name="habitPublicCheckBox">Is Public</string>
    <string name="saveHabitButtonName">Save</string>
    <string name="deleteHabitButtonName">Delete</string>
    <string name="scheduleTitle">Schedule</string>
    <string name="chipMonday">Mon</string>
    <string name="chipTuesday">Tues</string>
    <string name="chipWednesday">Wed</string>
    <string name="chipThursday">Thur</string>
    <string name="chipFriday">Fri</string>
    <string name="chipSaturday">Sat</string>
    <string name="chipSunday">Sun</string>

    <string name="addEventTitleHint">Add an Event Title</string>
    <string name="addEventCommentHint">Add a Comment (Max 20 characters)</string>
    <string name="eventStartDateHint">Event Date</string>
    <string name="eventStartDateButton">Event Date</string>
    <string name="addEventButtonName">Add</string>
    <string name="cancelAddEventButtonName">Cancel</string>
    <string name="addEventLocationHint">Add a Location</string>
    <string name="addEventPhotoHint">Add a Photo</string>
    <string name="HabitContentNameExample">Habit Name</string>
</resources>