<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/habit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addHabitTitleHint"
        android:inputType="textPersonName"
        android:maxLength="20"/>

    <EditText
        android:id="@+id/habit_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addHabitReasonHint"
        android:inputType="text"
        android:maxLength="30"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/habitStartDateHint"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btPickDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habitStartDateButton"
            android:layout_weight="2" />
    </LinearLayout>

    <include
        layout="@layout/weekly_schedule_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/habitPublicCheckBox"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:text="@string/habitPublicCheckBox" />


</LinearLayout>