<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Event.EditEventFragmentActivity">

    <include
        android:id="@+id/eventInclude"
        layout="@layout/event_info_reusable_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/saveEventButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveEventButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/saveHabitButtonName"
        app:layout_constraintBottom_toTopOf="@id/cancelEditEventButton"
        app:layout_constraintEnd_toStartOf="@id/deleteEventButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventInclude" />

    <Button
        android:id="@+id/deleteEventButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/deleteHabitButtonName"
        app:layout_constraintBottom_toTopOf="@id/cancelEditEventButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/saveEventButton"
        app:layout_constraintTop_toBottomOf="@+id/eventInclude" />

    <Button
        android:id="@+id/cancelEditEventButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelAddHabitButtonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveEventButton" />

</androidx.constraintlayout.widget.ConstraintLayout>